--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@vanilla-extract/babel-plugin": "^1.1.1",
+    "@vanilla-extract/css": "^1.6.1",
+    "@vanilla-extract/next-plugin": "^1.0.0",
+    "@vanilla-extract/webpack-plugin": "^2.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "sass": "^1.39.0",
