--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "disable-scroll": "^0.6.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@types/react-dom": "^17.0.9",
     "@vanilla-extract/babel-plugin": "^1.1.1",
     "@vanilla-extract/css": "^1.6.1",
     "@vanilla-extract/next-plugin": "^1.0.0",
