--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "disable-scroll": "^0.6.0",
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "recoil": "^0.4.1",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
     "tone": "^14.7.77",
@@ -27,6 +28,8 @@
     "@vanilla-extract/css": "^1.6.1",
     "@vanilla-extract/next-plugin": "^1.0.0",
     "@vanilla-extract/webpack-plugin": "^2.1.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "sass": "^1.39.0",
