--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "__tests__/utils/index.test.jsx", "__tests__/utils/index.test.jsx"  ],
   "exclude": [
     "node_modules"
   ]
