--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint"
   },
   "dependencies": {
@@ -22,17 +23,25 @@
     "use-interval": "^1.3.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
     "@vanilla-extract/babel-plugin": "^1.1.1",
     "@vanilla-extract/css": "^1.6.3",
     "@vanilla-extract/next-plugin": "^1.0.1",
     "@vanilla-extract/webpack-plugin": "^2.1.1",
+    "babel-jest": "^27.3.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.2.0",
     "eslint-config-next": "12.0.4",
+    "jest": "^27.3.1",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.43.4",
+    "ts-jest": "^27.0.7",
     "typescript": "4.5.2"
   },
   "packageManager": "yarn@3.0.1"
