--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "lint": "next lint"
+    "lint": "eslint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "disable-scroll": "^0.6.0",
@@ -38,11 +39,20 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.2.0",
     "eslint-config-next": "12.0.4",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "lint-staged": "^12.0.3",
+    "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.43.4",
     "ts-jest": "^27.0.7",
     "typescript": "4.5.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "packageManager": "yarn@3.0.1"
 }
