--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "lint": "eslint",
+    "lint": "next lint",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -37,8 +37,9 @@
     "babel-jest": "^27.3.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "8.2.0",
+    "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "eslint-plugin-testing-library": "^5.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^12.0.3",
@@ -46,11 +47,11 @@
     "react-test-renderer": "^17.0.2",
     "sass": "^1.43.4",
     "ts-jest": "^27.0.7",
-    "typescript": "4.5.2"
+    "typescript": "4.3.5"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
+      "next lint --fix",
       "git add"
     ]
   },
