--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "local": "python -m SimpleHTTPServer 8000",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "test": "jest",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "start": "next build && next start",
+    "test:unit": "jest",
+    "test:e2e:open": "cypress open",
+    "test:e2e": "cypress run",
+    "lint": "eslint",
+    "prepare": "husky install",
+    "sb": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "disable-scroll": "^0.6.0",
@@ -24,6 +28,14 @@
     "use-interval": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -35,10 +47,13 @@
     "@vanilla-extract/next-plugin": "^1.0.1",
     "@vanilla-extract/webpack-plugin": "^2.1.1",
     "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "cypress": "^9.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-testing-library": "^5.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
@@ -51,7 +66,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "next lint --fix",
+      "yarn lint",
       "git add"
     ]
   },
