--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "__tests__/**/*.[jt]s?(x)"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".next"
   ]
 }
