--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next build && next start",
     "test:unit": "jest",
+    "test:e2e:init": "cypress install",
     "test:e2e:open": "cypress open",
     "test:e2e": "cypress run",
     "lint": "eslint",
@@ -21,12 +22,14 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-howler": "^5.2.0",
     "recoil": "^0.5.2",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
     "tone": "^14.7.77",
     "tunajs": "^1.0.15",
-    "use-interval": "^1.3.0"
+    "use-interval": "^1.3.0",
+    "wavesurfer.js": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -43,6 +46,8 @@
     "@types/jest": "^27.0.3",
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-howler": "^3.7.3",
+    "@types/wavesurfer.js": "^5.2.2",
     "@vanilla-extract/babel-plugin": "^1.1.2",
     "@vanilla-extract/css": "^1.6.4",
     "@vanilla-extract/next-plugin": "^2.0.1",
