--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "disable-scroll": "^0.6.0",
+    "framer-motion": "^5.5.5",
     "inline-worker": "^1.1.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
