--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@4.7.0
   cypress: cypress-io/cypress@1
+  slack: circleci/slack@4.8.1
 
 jobs:
   build:
@@ -17,6 +18,10 @@ jobs:
       - run:
           name: Run E2E Tests
           command: $(npm bin)/cypress run
+      - slack/notify:
+          event: pass
+          channel: deploy
+          mentions: '@here'
 
 workflows:
   build:
