--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-howler": "^5.2.0",
+    "react-p5": "1.3.6",
     "recoil": "^0.5.2",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
@@ -45,6 +46,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
+    "@types/p5": "^1.4.0",
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-howler": "^3.7.3",
