--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-howler": "^5.2.0",
     "react-p5": "1.3.6",
+    "react-responsive": "^9.0.0-beta.6",
     "recoil": "^0.5.2",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
