--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "disable-scroll": "^0.6.0",
     "framer-motion": "^5.5.5",
     "inline-worker": "^1.1.0",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.1.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-howler": "^5.2.0",
-    "react-p5": "1.3.6",
+    "react-p5": "^1.3.27",
     "react-responsive": "^9.0.0-beta.6",
-    "recoil": "^0.5.2",
+    "recoil": "^0.6.1",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
     "tone": "^14.7.77",
@@ -36,21 +36,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^2.1.0",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-docs": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
-    "@storybook/react": "^6.3.12",
+    "@storybook/react": "^6.4.19",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/p5": "^1.4.0",
-    "@types/react": "17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-howler": "^3.7.3",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-howler": "^5.2.0",
     "@types/wavesurfer.js": "^5.2.2",
     "@vanilla-extract/babel-plugin": "^1.1.2",
     "@vanilla-extract/css": "^1.6.4",
@@ -69,7 +69,7 @@
     "jest": "^27.3.1",
     "lint-staged": "^12.0.3",
     "prettier": "^2.4.1",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.0.0",
     "sass": "^1.43.4",
     "ts-jest": "^27.0.7",
     "typescript": "4.5.2"
