update cypress, jest to latest version

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "jest",
     "test:e2e:init": "cypress install",
     "test:e2e:open": "cypress open",
-    "test:e2e": "cypress run",
+    "test:e2e": "cypress run --browser chrome",
     "lint": "eslint",
     "prepare": "husky install",
     "sb": "start-storybook -p 6006",
@@ -43,10 +43,10 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.4.19",
     "@testing-library/cypress": "^8.0.2",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.0.4",
+    "@types/jest": "^27.4.1",
     "@types/p5": "^1.4.0",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -56,11 +56,11 @@
     "@vanilla-extract/css": "^1.6.4",
     "@vanilla-extract/next-plugin": "^2.0.1",
     "@vanilla-extract/webpack-plugin": "^2.1.2",
-    "babel-jest": "^27.3.1",
-    "babel-loader": "^8.2.3",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "cypress": "^9.0.0",
+    "cypress": "^9.5.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "eslint-plugin-cypress": "^2.12.1",
