--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-howler": "^5.2.0",
     "react-p5": "^1.3.30",
     "react-responsive": "^9.0.0-beta.8",
-    "recoil": "^0.7.2",
+    "recoil": "^0.7.3",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
     "tone": "^14.7.77",
@@ -33,7 +33,7 @@
     "wavesurfer.js": "^6.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@mdx-js/react": "^2.1.0",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-docs": "^6.3.12",
@@ -50,27 +50,28 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-howler": "^5.2.0",
     "@types/wavesurfer.js": "^5.2.2",
-    "@vanilla-extract/babel-plugin": "^1.1.5",
-    "@vanilla-extract/css": "^1.7.0",
+    "@vanilla-extract/babel-plugin": "^1.1.7",
+    "@vanilla-extract/css": "^1.7.2",
     "@vanilla-extract/next-plugin": "^2.0.2",
     "@vanilla-extract/webpack-plugin": "^2.1.8",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "cypress": "^9.5.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.1.4",
+    "cypress": "^10.1.0",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-testing-library": "^5.2.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.1",
-    "jest": "^27.3.1",
-    "lint-staged": "^12.0.3",
-    "prettier": "^2.4.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "lint-staged": "^13.0.1",
+    "prettier": "^2.7.0",
     "react-test-renderer": "^18.1.0",
-    "sass": "^1.52.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "4.7.2"
+    "sass": "^1.52.3",
+    "ts-jest": "^28.0.5",
+    "typescript": "4.7.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
