--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.5",
+    "@types/cypress-image-snapshot": "^3.1.6",
     "@types/jest": "^28.1.6",
     "@types/p5": "^1.4.2",
     "@types/react": "^18.0.15",
@@ -59,6 +60,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "cypress": "^10.3.0",
+    "cypress-image-snapshot": "^4.0.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "eslint-plugin-cypress": "^2.12.1",
