--- a/package.json
+++ b/package.json
@@ -18,62 +18,62 @@
   },
   "dependencies": {
     "disable-scroll": "^0.6.0",
-    "framer-motion": "^7.3.2",
-    "next": "^12.3.1",
+    "framer-motion": "^8.0.2",
+    "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-howler": "^5.2.0",
     "react-p5": "^1.3.33",
-    "react-responsive": "^9.0.0-beta.10",
+    "react-responsive": "^9.0.2",
     "recoil": "^0.7.6",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
     "tone": "^14.7.77",
     "tunajs": "^1.0.15",
-    "wavesurfer.js": "^6.2.0"
+    "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@mdx-js/react": "^2.1.3",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-docs": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@testing-library/cypress": "^8.0.3",
+    "@babel/core": "^7.20.7",
+    "@mdx-js/react": "^2.2.1",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-docs": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/cypress-image-snapshot": "^3.1.6",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.2.4",
     "@types/p5": "^1.4.3",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-howler": "^5.2.0",
     "@types/wavesurfer.js": "^5.2.2",
     "@vanilla-extract/babel-plugin": "^1.2.0",
-    "@vanilla-extract/css": "^1.9.1",
+    "@vanilla-extract/css": "^1.9.2",
     "@vanilla-extract/next-plugin": "^2.1.1",
     "@vanilla-extract/webpack-plugin": "^2.2.0",
-    "babel-jest": "^29.0.2",
-    "babel-loader": "^8.2.5",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "cypress": "^10.7.0",
+    "cypress": "^12.2.0",
     "cypress-image-snapshot": "^4.0.1",
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-testing-library": "^5.6.3",
-    "husky": "^8.0.1",
-    "jest": "^29.0.2",
-    "jest-environment-jsdom": "^29.0.2",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
-    "sass": "^1.55.0",
+    "sass": "^1.57.1",
     "ts-jest": "^29.0.3",
-    "typescript": "4.8.4"
+    "typescript": "4.9.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
