--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/eslint-parser": "^7.26.10",
+    "@chromatic-com/storybook": "^3",
     "@mdx-js/react": "^3.1.0",
     "@storybook/addon-actions": "^8.6.6",
     "@storybook/addon-docs": "^8.6.6",
     "@storybook/addon-essentials": "^8.6.6",
     "@storybook/addon-links": "^8.6.6",
+    "@storybook/nextjs": "^8.6.6",
     "@storybook/react": "^8.6.6",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -72,7 +74,7 @@
     "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.57.1",
-    "storybook": "^7.6.10",
+    "storybook": "^8.6.6",
     "ts-jest": "^29.2.6",
     "typescript": "5.8.2"
   },
