--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e:open": "cypress open",
     "test:e2e": "cypress run --browser chrome",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit",
     "prepare": "husky install",
     "storybook": "storybook dev --docs"
   },
@@ -27,7 +28,7 @@
     "recoil": "^0.7.6",
     "regl": "^2.1.0",
     "soundbank-reverb": "^1.1.2",
-    "tone": "^14.7.77",
+    "tone": "^15.0.4",
     "tunajs": "^1.0.15",
     "wavesurfer.js": "^6.4.0"
   },
